Attempts to fix alignment on registry page.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -68,7 +68,9 @@ $header_text_size: 1.6em;
 }
 
 
-
+#left_box {
+  float: left;
+}
 
 // For the slideshow
 $slides_width: 900px;
